@@ -1,46 +1,43 @@
 package ru.hogwarts.school.service;
 
-import org.springframework.stereotype.Service;
 import ru.hogwarts.school.model.Student;
-
+import ru.hogwarts.school.repository.StudentRepository;
+import org.springframework.stereotype.Service;
 
 import java.util.Collection;
-import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class StudentService {
-    private final HashMap<Long, Student> students = new HashMap<>();
-    private long lastId = 0;
+    private final StudentRepository studentRepository;
+
+    public StudentService(StudentRepository studentRepository) {
+        this.studentRepository = studentRepository;
+    }
 
     public Student createStudent(Student student) {
-        student.setId(++lastId);
-        students.put(lastId, student);
-        return student;
+        return studentRepository.save(student);
     }
     public Student findStudent(Long id) {
-        return students.get(id);
+        return studentRepository.findById(id).get();
     }
     public Student editStudent(Student student) {
-        if (students.containsKey(student.getId())) {
-            students.put(student.getId(), student);
-            return student;
-        }
-        return null;
+        return studentRepository.save(student);
     }
-    public Student deleteStudent(long id) {
-        return students.remove(id);
+    public void deleteStudent(long id) {
+
+        studentRepository.deleteById(id);
     }
 
     public Collection<Student> getAllStudents() {
-        return students.values();
+
+        return studentRepository.findAll();
     }
 
     public List<Student> getAge(int age) {
-        return students.values()
+        return studentRepository.findAll()
                 .stream()
-                .filter(student -> student.getAge() >= age)
-                .collect(Collectors.toList());
+                .filter(e->e.getAge() >= age)
+                .toList();
     }
 }
